Implementa manipulação de círculos e retângulos, incluindo criação, destruição e funções auxiliares. Adiciona suporte para processamento de arquivos GEO e atualiza configurações do projeto.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "circulo.h": "c"
+        "circulo.h": "c",
+        "stdlib.h": "c",
+        "manipuladordearquivo.h": "c",
+        "formas.h": "c"
     }
 }
